<resources>
    <string name="app_name">Shoe Store Inventory</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_prompt">Please sign in to continue</string>
    <string name="create_account">Create Account</string>
    <string name="Have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="we_are_happy_to_have_you">We are happy to have you</string>
    <string name="never_lose_a_shoe">Never lose a shoe</string>
    <string name="keep_track_of_your_inventory">by keeping track of your inventory</string>
    <string name="it_s_easy">It\'s easy</string>
    <string name="add_the_information_you_need">Add all the information you need</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments…</string>
    <string name="brand">Brand</string>
    <string name="in_stock">In Stock:</string>
    <string name="add_a_shoe_icon">add a shoe icon</string>
    <string name="add_color">add color</string>
    <string name="add_new_item">Add new item</string>
    <string name="nothing_to_display">No shoes to display yet, please add a pair</string>
    <string name="seek_bar_result">%1$d/100</string>
    <string name="_0_100">0/100</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="delete_all">Delete All</string>
    <string name="available">Available:</string>
    <string name="comments_tv">Comments:</string>
    <string name="back">Back</string>
    <string name="photo_of_your_choice">Photo of your choice</string>
    <string name="background_image">Background image</string>
</resources>