<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.WelcomeScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sneakers_white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/it_s_easy"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/add_the_information_you_need"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/text_size_onB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <TextView
        android:id="@+id/button_finish_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom_onB"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/finish"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/text_bottom_onB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/button_back_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_bottom_onB"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/back"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_bottom_onB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>