<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="updateFragment"
            type="com.bejnarowicz.shoestoreinventory.main.update.UpdateFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin"
        tools:context=".main.add.AddFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/update_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxStrokeColor="@color/box_stroke"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_update_brand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/brand"
            app:boxStrokeColor="@color/box_stroke"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_name_layout"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/in_stock"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_update_brand" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:max="100"
                android:progressTint="@color/primaryColor"
                android:thumb="@drawable/seek_bar_image"
                android:thumbTint="@color/primaryColor" />

            <TextView
                android:id="@+id/number_update_seek_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/_0_100"
                android:textAlignment="center"
                tools:text="24/100" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/add_a_shoe_icon"
            android:src="@drawable/add_screen_image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_seek_bar" />


        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_tv"
            app:layout_constraintBottom_toTopOf="@id/et_comments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <EditText
            android:id="@+id/et_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="Comment"
            android:hint="@string/comments"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comments" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/primaryLightColor"
            android:elevation="150dp"
            android:onClick="@{()-> updateFragment.updateItem()}"
            android:padding="15dp"
            android:text="@string/update"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:backgroundTint="#D6C9C9"
            android:elevation="150dp"
            android:onClick="@{()-> updateFragment.onCancel()}"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>